--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="info">Інформація щодо вступу</string>
     <string name="list">Перелік дисциплін</string>
     <string name="contacts">Контакти</string>
+    <string name="faculties">Факультети</string>
 </resources>
