--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="close_nav">Close Navigation Drawer</string>
     <string name="home">Головна</string>
     <string name="info">Інформація щодо вступу</string>
-    <string name="list">Перелік дисциплін</string>
+    <string name="disciplines">Перелік дисциплін</string>
     <string name="contacts">Контакти</string>
     <string name="faculties">Факультети</string>
 </resources>
