sylabuses opening added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="disciplines">Перелік дисциплін</string>
     <string name="contacts">Контакти</string>
     <string name="faculties">Факультети</string>
+    <string name="sylabuses">Силабуси</string>
 </resources>
