HomeFragment content added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="contacts">Контакти</string>
     <string name="faculties">Факультети</string>
     <string name="sylabuses">Силабуси</string>
+    <string name="website">Вебсайт</string>
 </resources>
