--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="open_nav">Open Navigation Drawer</string>
     <string name="close_nav">Close Navigation Drawer</string>
     <string name="home">Головна</string>
-    <string name="info">Інформація щодо вступу</string>
+    <string name="info">Інформація про вступ</string>
     <string name="disciplines">Перелік дисциплін</string>
     <string name="contacts">Контакти</string>
     <string name="faculties">Факультети</string>
